--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "apinode-onepiece",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "> Isso é uma citação, ou texto especial",
+  "main": "server.js",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,12 +24,5 @@
   "bugs": {
     "url": "https://github.com/machadomrm/apinode-onepiece/issues"
   },
-  "homepage": "https://github.com/machadomrm/apinode-onepiece#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.0.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  }
+  "homepage": "https://github.com/machadomrm/apinode-onepiece#readme"
 }
